samples/_failures_safe/1761138729_76ad0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47bcb585.c: In function ‘print_stats’:
./samples/SAFE/__tmp_47bcb585.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
